[package]
name = "atlas-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "*"
atlas-common = {path = "../Atlas-Common"}
chrono = "*"
influxdb = {version = "0.6", features= ["derive"] }
thread_local = "*"
rand = "*"
lazy_static = "*"
tracing = "*"
dashmap = "*"

mprober-lib = "*"
procinfo = "*"
page_size = "*"